ducks lightweight -2 index.html

--- a/index.html
+++ b/index.html
@@ -77,98 +77,109 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Duck Tracker</title>
-  <script async src="https://docs.opencv.org/4.x/opencv.js"></script>
+  <title>Duck Tracker (Fast)</title>
   <style>
-    body { margin: 0; background: #111; color: #fff; text-align: center; font-family: sans-serif; }
+    body { margin: 0; background: #111; color: #fff; font-family: sans-serif; text-align: center; }
     video, canvas { width: 100%; max-width: 480px; border-radius: 12px; margin: 10px 0; }
-    #status { margin: 10px; }
   </style>
 </head>
 <body>
   <h2>🦆 Bright Duck Tracker</h2>
-  <p id="status">Loading OpenCV...</p>
   <video id="video" autoplay playsinline></video>
   <canvas id="canvas"></canvas>
+  <p id="coords">Coordinates: –</p>
 
   <script>
-    let video = document.getElementById('video');
-    let canvas = document.getElementById('canvas');
-    let ctx = canvas.getContext('2d');
-    let statusText = document.getElementById('status');
-
-    function onOpenCvReady() {
-      statusText.textContent = "OpenCV.js Loaded!";
-      initCamera();
-    }
+    const video = document.getElementById("video");
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
+    const coordsText = document.getElementById("coords");
 
     async function initCamera() {
       const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } });
       video.srcObject = stream;
-      video.onloadedmetadata = () => {
-        canvas.width = video.videoWidth;
-        canvas.height = video.videoHeight;
-        startProcessing();
-      };
+      return new Promise(resolve => {
+        video.onloadedmetadata = () => {
+          canvas.width = video.videoWidth;
+          canvas.height = video.videoHeight;
+          resolve();
+        };
+      });
     }
 
-    function startProcessing() {
-      let src = new cv.Mat(video.videoHeight, video.videoWidth, cv.CV_8UC4);
-      let hsv = new cv.Mat();
-      let mask = new cv.Mat();
-      let contours = new cv.MatVector();
-      let hierarchy = new cv.Mat();
+    function inRange(h, s, v, lower, upper) {
+      return (
+        h >= lower[0] && h <= upper[0] &&
+        s >= lower[1] && s <= upper[1] &&
+        v >= lower[2] && v <= upper[2]
+      );
+    }
 
-      // HSV ranges for bright green & orange
-      // Adjust if lighting differs
-      let lowerGreen = new cv.Mat(video.videoHeight, video.videoWidth, cv.CV_8UC3, [35, 100, 100, 0]); // HSV lower bound
-      let upperGreen = new cv.Mat(video.videoHeight, video.videoWidth, cv.CV_8UC3, [85, 255, 255, 255]); // HSV upper bound
-      let lowerOrange = new cv.Mat(video.videoHeight, video.videoWidth, cv.CV_8UC3, [5, 150, 150, 0]);
-      let upperOrange = new cv.Mat(video.videoHeight, video.videoWidth, cv.CV_8UC3, [20, 255, 255, 255]);
-
-      function processFrame() {
-        ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
-        let imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-        src.data.set(imageData.data);
-
-        cv.cvtColor(src, hsv, cv.COLOR_RGBA2RGB);
-        cv.cvtColor(hsv, hsv, cv.COLOR_RGB2HSV);
-
-        // Green mask
-        let maskGreen = new cv.Mat();
-        cv.inRange(hsv, lowerGreen, upperGreen, maskGreen);
-
-        // Orange mask
-        let maskOrange = new cv.Mat();
-        cv.inRange(hsv, lowerOrange, upperOrange, maskOrange);
-
-        // Combine masks
-        cv.add(maskGreen, maskOrange, mask);
-
-        // Find contours
-        cv.findContours(mask, contours, hierarchy, cv.RETR_EXTERNAL, cv.CHAIN_APPROX_SIMPLE);
-
-        for (let i = 0; i < contours.size(); i++) {
-          let cnt = contours.get(i);
-          let rect = cv.boundingRect(cnt);
-
-          // Filter out small blobs
-          if (rect.width * rect.height > 500) {
-            ctx.strokeStyle = "#00FF00";
-            ctx.lineWidth = 3;
-            ctx.strokeRect(rect.x, rect.y, rect.width, rect.height);
-
-            ctx.fillStyle = "#fff";
-            ctx.fillText("Duck", rect.x, rect.y > 10 ? rect.y - 5 : 10);
-          }
+    function rgbToHsv(r, g, b) {
+      r /= 255; g /= 255; b /= 255;
+      const max = Math.max(r, g, b), min = Math.min(r, g, b);
+      let h, s, v = max;
+      const d = max - min;
+      s = max === 0 ? 0 : d / max;
+      if (max === min) {
+        h = 0;
+      } else {
+        switch (max) {
+          case r: h = ((g - b) / d + (g < b ? 6 : 0)); break;
+          case g: h = ((b - r) / d + 2); break;
+          case b: h = ((r - g) / d + 4); break;
         }
+        h /= 6;
+      }
+      return [h * 180, s * 255, v * 255]; // H:0–180, S:0–255, V:0–255
+    }
 
-        requestAnimationFrame(processFrame);
+    function processFrame() {
+      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+      const frame = ctx.getImageData(0, 0, canvas.width, canvas.height);
+      const data = frame.data;
+
+      let sumX = 0, sumY = 0, count = 0;
+
+      for (let i = 0; i < data.length; i += 4 * 4) { // skip some pixels for speed
+        const r = data[i], g = data[i+1], b = data[i+2];
+        const [h, s, v] = rgbToHsv(r, g, b);
+
+        // Bright green
+        const isGreen = inRange(h, s, v, [35, 100, 100], [85, 255, 255]);
+        // Bright orange
+        const isOrange = inRange(h, s, v, [5, 150, 150], [25, 255, 255]);
+
+        if (isGreen || isOrange) {
+          const pixelIndex = i / 4;
+          const x = pixelIndex % canvas.width;
+          const y = Math.floor(pixelIndex / canvas.width);
+          sumX += x;
+          sumY += y;
+          count++;
+        }
+      }
+
+      if (count > 200) { // only show if enough pixels detected
+        const cx = sumX / count;
+        const cy = sumY / count;
+        ctx.beginPath();
+        ctx.arc(cx, cy, 20, 0, 2 * Math.PI);
+        ctx.lineWidth = 3;
+        ctx.strokeStyle = "#00FF00";
+        ctx.stroke();
+        coordsText.textContent = `Coordinates: (${cx.toFixed(0)}, ${cy.toFixed(0)})`;
+      } else {
+        coordsText.textContent = "Coordinates: –";
       }
 
       requestAnimationFrame(processFrame);
     }
+
+    (async () => {
+      await initCamera();
+      processFrame();
+    })();
   </script>
 </body>
 </html>
-
