--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </html> -->
 
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -182,4 +182,143 @@
     })();
   </script>
 </body>
+</html> -->
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Multi Duck Tracker</title>
+  <style>
+    body { margin: 0; background: #111; color: #fff; font-family: sans-serif; text-align: center; }
+    video, canvas { width: 100%; max-width: 480px; border-radius: 12px; margin: 10px 0; }
+  </style>
+</head>
+<body>
+  <h2>🦆 Multi Duck Tracker</h2>
+  <video id="video" autoplay playsinline></video>
+  <canvas id="canvas"></canvas>
+  <p id="coords">Detections: –</p>
+
+  <script>
+    const video = document.getElementById("video");
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
+    const coordsText = document.getElementById("coords");
+
+    async function initCamera() {
+      const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } });
+      video.srcObject = stream;
+      return new Promise(resolve => {
+        video.onloadedmetadata = () => {
+          canvas.width = video.videoWidth;
+          canvas.height = video.videoHeight;
+          resolve();
+        };
+      });
+    }
+
+    function inRange(h, s, v, lower, upper) {
+      return (
+        h >= lower[0] && h <= upper[0] &&
+        s >= lower[1] && s <= upper[1] &&
+        v >= lower[2] && v <= upper[2]
+      );
+    }
+
+    function rgbToHsv(r, g, b) {
+      r /= 255; g /= 255; b /= 255;
+      const max = Math.max(r, g, b), min = Math.min(r, g, b);
+      let h, s, v = max;
+      const d = max - min;
+      s = max === 0 ? 0 : d / max;
+      if (max === min) {
+        h = 0;
+      } else {
+        switch (max) {
+          case r: h = ((g - b) / d + (g < b ? 6 : 0)); break;
+          case g: h = ((b - r) / d + 2); break;
+          case b: h = ((r - g) / d + 4); break;
+        }
+        h /= 6;
+      }
+      return [h * 180, s * 255, v * 255]; // H:0–180, S:0–255, V:0–255
+    }
+
+    function processFrame() {
+      ctx.drawImage(video, 0, 0, canvas.width, canvas.height);
+      const frame = ctx.getImageData(0, 0, canvas.width, canvas.height);
+      const data = frame.data;
+
+      let detections = [];
+      let visited = new Uint8Array(canvas.width * canvas.height);
+
+      function floodFill(startX, startY, idx) {
+        let queue = [[startX, startY]];
+        let sumX = 0, sumY = 0, count = 0;
+
+        while (queue.length > 0) {
+          let [x, y] = queue.pop();
+          if (x < 0 || y < 0 || x >= canvas.width || y >= canvas.height) continue;
+          let index = y * canvas.width + x;
+          if (visited[index]) continue;
+
+          const i = index * 4;
+          const r = data[i], g = data[i+1], b = data[i+2];
+          const [h, s, v] = rgbToHsv(r, g, b);
+
+          const isGreen = inRange(h, s, v, [35, 100, 100], [85, 255, 255]);
+          const isOrange = inRange(h, s, v, [5, 150, 150], [25, 255, 255]);
+
+          if (isGreen || isOrange) {
+            visited[index] = 1;
+            sumX += x;
+            sumY += y;
+            count++;
+
+            // Explore neighbors
+            queue.push([x+1, y]);
+            queue.push([x-1, y]);
+            queue.push([x, y+1]);
+            queue.push([x, y-1]);
+          }
+        }
+        if (count > 200) { // ignore noise
+          detections.push({ x: sumX / count, y: sumY / count, count });
+        }
+      }
+
+      for (let y = 0; y < canvas.height; y += 4) {
+        for (let x = 0; x < canvas.width; x += 4) {
+          let idx = y * canvas.width + x;
+          if (!visited[idx]) {
+            floodFill(x, y, idx);
+          }
+        }
+      }
+
+      // Draw detections
+      detections.forEach(det => {
+        ctx.beginPath();
+        ctx.arc(det.x, det.y, 20, 0, 2 * Math.PI);
+        ctx.lineWidth = 3;
+        ctx.strokeStyle = "#00FF00";
+        ctx.stroke();
+      });
+
+      coordsText.textContent = `Detections: ${detections.length}`;
+      requestAnimationFrame(processFrame);
+    }
+
+    (async () => {
+      await initCamera();
+      processFrame();
+    })();
+  </script>
+</body>
 </html>
+
+
