--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -147,10 +147,10 @@
     })();
   </script>
 </body>
-</html> -->
+</html>
 
 
-
+<!-- 
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -245,6 +245,7 @@
     })();
   </script>
 </body>
-</html>
+</html> -->
+
 
 
